# NeoQuota

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: with-rustup-path.mjs
src/: App.tsx  clientApi.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cpa.rs  lib.rs  main.rs  models.rs  pricing.rs  quota.rs  secrets.rs  service.rs  storage.rs
src/server/: alertMonitor.ts  collector.ts  config.ts  cpaClient.ts  db.ts  http.ts  server.ts
src/shared/: analytics.ts  domain.ts  pricing.ts  quota.ts
